# ai-tools

./: README.md  claude.py  management-report-prompt.md  pyproject.toml  salesgpt.py  test.py
.github/: copilot-instructions.md
core/: boreport.py  mongodb.py  ols.py  openai_client.py
notebooks/: template.ipynb  weekly_report.ipynb
reports/: 20250428_funnel_analysis.md  20250428_ols_analysis.md  20250508_funnel_analysis.md  20250508_ols_analysis.md  20250513_funnel_analysis.md  20250513_multivar_analysis.md  20250513_ols_analysis.md  20250513_sales.md
scripts/: analyze_ols.py  claude.py
src/core/: anthropic_client.py  ga4.py  openai_client.py
src/utils/: ga4.py  prompts.py
