[project]
name = "ai-tools"
version = "0.1.0"
description = "AI Tools for Izzaz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-analytics-data>=0.18.18",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymongo>=4.12.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
visualization = [
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2"
]
stats = [
    "statsmodels>=0.14.2",
    "numpy>=1.26.4"
]
